--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Projects</a></li>
-                    <li class="active"><a href="about.html">Our Studio</a></li>
+                    <li class="active"><a href="index.html">Projects</a></li>
+                    <li><a href="about.html">Our Studio</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                </ul>
@@ -54,66 +54,120 @@
   </div>
 </div>
 
+<!-- Home Section -->
 
-<!-- About Section -->
-
-<section id="about">
+<section id="home">
      <div class="container">
           <div class="row">
 
-               <div class="col-md-offset-1 col-md-10 col-sm-12">
-                    <div class="section-title">
-                         <h3>about our story</h3>
-                         <h2>The creative web & mobile studio and focused on brand identity, web development and social marketing.</h2>
-                    </div>
-
-                    <div class="col-md-8 col-sm-12">
-                         <img src="images/about-image.jpg" class="img-responsive" alt="About">
-                    </div>
-
-                    <div class="col-md-4 col-sm-12">
-                         <h1>Magnet Studio</h1>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                    </div>
-
-                    <div class="clearfix"></div>
-
-                     <hr>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-
+               <div class="col-md-12 col-sm-12">
+                    <h2>阿佐ヶ谷</h2>
                     <hr>
-
-                    <div class="col-md-4 col-sm-6">
-                         <h3>Web Development</h3>
-                         <ul>
-                              <li>Online Shopping Site</li>
-                              <li>Wordpress CMS</li>
-                              <li>Bootstrap themes</li>
-                              <li>Web Application</li>
-                         </ul>
+                <div class="col-md-6 col-sm-6">
+                     <ul class="social-icon">
+                          <li><a href="#" class="fa fa-facebook"></a></li>
+                          <li><a href="#" class="fa fa-twitter"></a></li>
+                          <li><a href="#" class="fa fa-linkedin"></a></li>
+                     </ul>
                     </div>
+               </div>
 
-                    <div class="col-md-4 col-sm-6">
-                         <h3>Brand Identity</h3>
-                         <ul>
-                              <li>Logo Design</li>
-                              <li>Personal Branding</li>
-                              <li>Flyer Design</li>
-                              <li>Creative Direction</li>
-                         </ul>
-                    </div>
+          </div>
+     </div>
+</section>
 
-                    <div class="col-md-4 col-sm-6">
-                         <h3>Social marketing</h3>
-                         <ul>
-                              <li>facebook, twitter.</li>
-                              <li>Page Maintenance</li>
-                              <li>Social media</li>
-                         </ul>
-                    </div>
+<!-- Portfolio Section -->
+
+<section id="portfolio">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-4 col-sm-6">
+                    <a href="single-project.html">
+                         <div class="portfolio-thumb">
+                              <img src="images/portfolio-img1.jpg" class="img-responsive" alt="Portfolio">
+                                   <div class="portfolio-overlay">
+                                        <div class="portfolio-item">
+                                             <h3>DRINK</h3>
+                                             <small>beer/whisky/wine/softdrink</small>
+                                        </div>
+                                   </div>
+                         </div>
+                    </a>
+               </div>
+
+               <div class="col-md-4 col-sm-6">
+                    <a href="single-project.html">
+                         <div class="portfolio-thumb">
+                              <img src="images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
+                                   <div class="portfolio-overlay">
+                                        <div class="portfolio-item">
+                                             <h3>FOOD</h3>
+                                             <small>lightmeal</small>
+                                        </div>
+                                   </div>
+                         </div>
+                    </a>
+               </div>
+
+               <div class="col-md-4 col-sm-6">
+                    <a href="single-project.html">
+                         <div class="portfolio-thumb">
+                              <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
+                                   <div class="portfolio-overlay">
+                                        <div class="portfolio-item">
+                                             <h3>ACCESS</h3>
+                                             <small>HOW TO COME OUR SHOP</small>
+                                        </div>
+                                   </div>
+                         </div>
+                    </a>
+               </div>
+
+               <div class="col-md-4 col-sm-6">
+                    <a href="single-project.html">
+                         <div class="portfolio-thumb">
+                              <img src="images/portfolio-img4.jpg" class="img-responsive" alt="Portfolio">
+                                   <div class="portfolio-overlay">
+                                        <div class="portfolio-item">
+                                             <h3>PRODUCTS</h3>
+                                             <small>Introduce Somegoods</small>
+                                        </div>
+                                   </div>
+                         </div>
+                    </a>
+               </div>
+
+               <div class="col-md-4 col-sm-6">
+                    <a href="single-project.html">
+                         <div class="portfolio-thumb">
+                              <img src="images/portfolio-img5.jpg" class="img-responsive" alt="Portfolio">
+                                   <div class="portfolio-overlay">
+                                        <div class="portfolio-item">
+                                             <h3>Project Name</h3>
+                                             <small>Social marketing</small>
+                                        </div>
+                                   </div>
+                         </div>
+                    </a>
+               </div>
+
+               <div class="col-md-4 col-sm-6">
+                    <a href="single-project.html">
+                         <div class="portfolio-thumb">
+                              <img src="images/portfolio-img6.jpg" class="img-responsive" alt="Portfolio">
+                                   <div class="portfolio-overlay">
+                                        <div class="portfolio-item">
+                                             <h3>Project Name</h3>
+                                             <small>Fyler Design</small>
+                                        </div>
+                                   </div>
+                         </div>
+                    </a>
+               </div>
+
+               <div class="col-md-12 col-sm-12 text-center">
+                    <h3>hello, if you interest working together. just send message <a href="contact.html">contact page</a></h3>
                </div>
 
           </div>
@@ -135,26 +189,12 @@
                </div>
 
                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
-                    <p><a href="mailto:youremail@gmail.com">hello@yourstudio.co</a></p>
-                    <p>(+01) 2048937 / 02 203403</p>
+                    <p><a href="mailto:gayahouse@gmail.com">hello@yourstudio.co</a></p>
+                    <p>080000000</p>
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
                     <hr>
-               </div>
-
-               <div class="col-md-6 col-sm-6">
-                    <div class="footer-copyright">
-                         <p>© 2016 Magnet Studio | All Rights Reserved.</p>
-                    </div>
-               </div>
-
-               <div class="col-md-6 col-sm-6">
-                    <ul class="social-icon">
-                         <li><a href="#" class="fa fa-facebook"></a></li>
-                         <li><a href="#" class="fa fa-twitter"></a></li>
-                         <li><a href="#" class="fa fa-linkedin"></a></li>
-                    </ul>
                </div>
 
           </div>
