--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Magnet - Minimal Portfolio Template</title>
+<title>阿佐ヶ谷</title>
 
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -61,8 +61,15 @@
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h2>The creative web & mobile studio. we are young designers and focused on brand identity, web development and social marketing.</h2>
+                    <h2>阿佐ヶ谷</h2>
                     <hr>
+                <div class="col-md-6 col-sm-6">
+                     <ul class="social-icon">
+                          <li><a href="#" class="fa fa-facebook"></a></li>
+                          <li><a href="#" class="fa fa-twitter"></a></li>
+                          <li><a href="#" class="fa fa-linkedin"></a></li>
+                     </ul>
+                    </div>
                </div>
 
           </div>
@@ -81,8 +88,8 @@
                               <img src="images/portfolio-img1.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Project Name</h3>
-                                             <small>Brand Identity</small>
+                                             <h3>DRINK</h3>
+                                             <small>beer/whisky/wine/softdrink</small>
                                         </div>
                                    </div>
                          </div>
@@ -95,8 +102,8 @@
                               <img src="images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Project Name</h3>
-                                             <small>Web Development</small>
+                                             <h3>FOOD</h3>
+                                             <small>lightmeal</small>
                                         </div>
                                    </div>
                          </div>
@@ -109,8 +116,8 @@
                               <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Project Name</h3>
-                                             <small>Mobile App</small>
+                                             <h3>ACCESS</h3>
+                                             <small>HOW TO COME OUR SHOP</small>
                                         </div>
                                    </div>
                          </div>
@@ -123,8 +130,8 @@
                               <img src="images/portfolio-img4.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Project Name</h3>
-                                             <small>Logo Design</small>
+                                             <h3>PRODUCTS</h3>
+                                             <small>Introduce Somegoods</small>
                                         </div>
                                    </div>
                          </div>
@@ -182,28 +189,14 @@
                </div>
 
                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
-                    <p><a href="mailto:youremail@gmail.com">hello@yourstudio.co</a></p>
-                    <p>(+01) 2048937 / 02 203403</p>
+                    <p><a href="mailto:gayahouse@gmail.com">hello@yourstudio.co</a></p>
+                    <p>080000000</p>
                </div>
 
                <div class="clearfix col-md-12 col-sm-12">
                     <hr>
                </div>
 
-               <div class="col-md-6 col-sm-6">
-                    <div class="footer-copyright">
-                         <p>© 2016 Magnet Studio | All Rights Reserved.</p>
-                    </div>
-               </div>
-
-               <div class="col-md-6 col-sm-6">
-                    <ul class="social-icon">
-                         <li><a href="#" class="fa fa-facebook"></a></li>
-                         <li><a href="#" class="fa fa-twitter"></a></li>
-                         <li><a href="#" class="fa fa-linkedin"></a></li>
-                    </ul>
-               </div>
-               
           </div>
      </div>
 </footer>
