--- a/index.html
+++ b/index.html
@@ -40,7 +40,78 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <img src=" juntokyo.svg" width="60" />
+               <?xml version="1.0" encoding="utf-8"?>
+               \<svg version="1.1" id="レイヤー_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+	              y="0px" viewBox="0 0 63 58" style="enable-background:new 0 0 63 58;" xml:space="preserve">
+                <image style="overflow:visible;" width="45" height="46" xlink:href="data:image/jpeg;base64,/9j/4QlQaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wLwA8P3hwYWNrZXQgYmVnaW49Iu+7vyIg
+                aWQ9Ilc1TTBNcENlaGlIenJlU3pOVGN6a2M5ZCI/PiA8eDp4bXBtZXRhIHhtbG5zOng9ImFkb2Jl
+                Om5zOm1ldGEvIiB4OnhtcHRrPSJBZG9iZSBYTVAgQ29yZSA1LjYtYzE0MiA3OS4xNjA5MjQsIDIw
+                MTcvMDcvMTMtMDE6MDY6MzkgICAgICAgICI+IDxyZGY6UkRGIHhtbG5zOnJkZj0iaHR0cDovL3d3
+                dy53My5vcmcvMTk5OS8wMi8yMi1yZGYtc3ludGF4LW5zIyI+IDxyZGY6RGVzY3JpcHRpb24gcmRm
+                OmFib3V0PSIiLz4gPC9yZGY6UkRGPiA8L3g6eG1wbWV0YT4gICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAg
+                ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICA8P3hwYWNrZXQgZW5kPSJ3Ij8+/+0ALFBo
+                b3Rvc2hvcCAzLjAAOEJJTQQlAAAAAAAQ1B2M2Y8AsgTpgAmY7PhCfv/bAIQAAQEBAQEBAQEBAQEB
+                AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQICAgICAgICAgICAwMDAwMDAwMDAwEBAQEB
+                AQECAQECAgIBAgIDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMD
+                AwMD/90ABAAG/+4ADkFkb2JlAGTAAAAAAf/AABEIAC4ALQMAEQABEQECEQH/xABnAAEAAgMBAAAA
+                AAAAAAAAAAAGAAoEBQcCAQEAAAAAAAAAAAAAAAAAAAAAEAACAwABAwMCBQUAAAAAAAACAwEEBQYA
+                ERITISIUMQcVMkFRFiMzcbERAQAAAAAAAAAAAAAAAAAAAAD/2gAMAwAAARECEQA/AL9V7TzctUO0
+                9CjnJLyiG3raKipkY8iiGWGLGfEfeff2joBla3ynki1XKWrncYqWYZay6TM0djVt5yzhQ29GXW61
+                esLyIThSRKQAxiWyU9oBDga1m+N2jppr1tvHeFbTRVYTKrIcv1qWhTk/7sU9CvPmIn81HBrmSkJK
+                QQdBOgnQf//QvXaPFix9TR5VnqzdeHmzQ06XI1nbuVxUkpbPHtpgW7GYoVLiApysqvl3kZV3KZDo
+                VSyq5VrXE+Xo2q6bKfIfEvSesWh5D7+JeJR3j9ug0exxTH2Xjfap1HYUv0q+5lPPP2K4x5+mMXEd
+                psJXLC7JeLUfIokJgpiQ0zNLkXFI9bkLlcg48AxNrfp0ho6mMHmfnb2c1BnVuZigkZbZqwokDBEa
+                fTgmADsSExEwITAxggMZghISjuJCUd4ISie8TH36D10H/9G/sYAwDWwRNbBIDAoiRMDjxISifaRI
+                Z7THQDOM35zW/wBHajfHTzFFGQ50iH57gKmIp3Ks+IC6znpka9xY9zW0IZMQDVyQZl7kU4miad5I
+                VMazKvy3kASU0FOOIBmftkUdst0t90vKfp3CXhJAyIFgJ5gGhMTAsWwe0xPYwMDj3iY9xISGf9TH
+                QD+PC3D0bPE2mxtFFWNPjTmeZEvH9Ya9jHNsjEGWFZNYqmZkpqvSM9yAikGXQf/Sv8dAY5fTzbOB
+                oWdFBs/Kq1jVpvrv+i0KV6ihjq9nN0IEjo3IIfETiJgoKQMTAiAgFaHM7/G62Nn8zr11J1tXKyI3
+                r1bxydOnrKaLa2kusLquNuJ7eDVukaTpiSUfylKw2FepmUpIuFc1zc2sLJMsR1qjt8fCfmXo1av1
+                ibuQo2HMyFawtQ9/Zf27BjXtLcc2lqNRxtlvisN0L9rO5QmKTcm1XYnRB6b1avOeo1LloG5krA63
+                65jv0C7jPJZ5Kq3YXi6+ZTQaRp3tJdVVXZW5XqzbyIVabbdRAZGIa5KIZJd1+Y/LoP/Tv7zPaJn9
+                ojv/AD/z3noOP7P4icL5HyHP/DbN2qt7klzSqWNbAKrohcRh5bD0b9qwB1kwisTKIokzKBk2eHvM
+                9ugZcwgvR49IycePLuO+fj9pBlz0iE/v8Chnaeg3DOP4LZMm4mQwmTMsJmbSOWTPvMnJJmSmZ/no
+                CnIOBUdD6GMVGbiLmwFXdVUqnRjV486zXt3qIuymUbCLv1NRRod5SIfMZGRacSCnBxK/Hs4Mupa0
+                7dZTrDUnraNnUspCw43RVXauGx/0dXz8ErkphSogB7DERAf/1L/HQYNPMoZ522UqiazL9k7l1iw7
+                MtWWfqa5k9zYXv2jvPYY9o7R0HN1fhratczXybe5fyTWy8e8WhxrjE6lqtkV77VEJ3tqrWNKNlme
+                ZlFBTB9Gt/kmDb4EsOrdBOgnQf/Z" transform="matrix(1 0 0 1 9 7)">
+                </image>
+                </svg>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
