--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="icon icon-bar"></span>
                </button>
                <?xml version="1.0" encoding="utf-8"?>
-               \<svg version="1.1" id="レイヤー_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+               <svg version="1.1" id="レイヤー_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 	              y="0px" viewBox="0 0 63 58" style="enable-background:new 0 0 63 58;" xml:space="preserve">
                 <image style="overflow:visible;" width="45" height="46" xlink:href="data:image/jpeg;base64,/9j/4QlQaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wLwA8P3hwYWNrZXQgYmVnaW49Iu+7vyIg
                 aWQ9Ilc1TTBNcENlaGlIenJlU3pOVGN6a2M5ZCI/PiA8eDp4bXBtZXRhIHhtbG5zOng9ImFkb2Jl
