--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <img src=" fonts/juntokyo.svg" width="60" />
+               <img src=" fonts/juntokyo.svg" width="60" id = "juntokyotop" />
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
