--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <img src=" fonts/juntokyo.svg" width="60" id = "juntokyotop" />
+               <a href="index.html" class="navbar-brand"><img src=" fonts/juntokyo.svg" width="60" id = "juntokyotop" /></a>
+
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
